# raven

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_PRD.md  CONTRIBUTING.md  Dockerfile  GAP_ANALYSIS.md  LICENSE  Makefile  OSS_GO_LIVE_CHECKLIST.md  PERFORMANCE_AUDIT.md  QA-BUGS.md  README.md  STYLEGUIDE.md  biome.json  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  ideas.md  init-db.sql  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  raven.yaml  tsconfig.base.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/api-py/: pyproject.toml
apps/api-py/alembic/: env.py
apps/api-py/src/: config.py  main.py  redis.py
apps/api-py/src/auth/: password.py
apps/api-py/src/email/templates/: budget_alert.mjml
apps/api-py/src/lib/: errors.py  events.py  instance_settings.py  pagination.py  webhook_dispatcher.py
apps/api-py/src/models/: __init__.py  budget.py  guardrail.py  invitation.py  key.py  provider.py  request_log.py  user.py
apps/api-py/src/proxy/: auth.py  budget_check.py  cache.py  content_analyzer.py  content_router.py  fallback.py  latency_tracker.py  logger.py  pipeline.py  provider_resolver.py
apps/api-py/src/routes/: admin.py  analytics.py  auth.py  models.py  providers.py  proxy.py  routing_rules.py  setup.py  webhooks.py
apps/api-py/src/schemas/: admin.py  budget.py  guardrail.py  routing_rule.py  setup.py  user.py  webhook.py
dashboard/: biome.json  index.html  (+3 more)
sdks/python/: CLAUDE.md  README.md  pyproject.toml
sdks/python/tests/: test_client.py
(+1155 files in other folders)
