[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raven-gateway"
version = "0.1.0"
description = "Python SDK for Raven AI Gateway"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/raven"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
